tests/invalid/equation_count_mismatch_too_many_vars.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "TooManyStateVars",
    "description": "More state variables than equations - variation 1"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0 },
        "y": { "type": "state", "units": "m", "default": 1.0 },
        "z": { "type": "state", "units": "m", "default": 2.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-1, "y"] }
        }
      ]
    }
  }
}